[tool.poetry]
name = "repl_python3_DiscordBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"
flask = "^2.0.1"
discord = "^1.0.1"
search-that-hash = "^0.2.8"
date-time-event = "^0.0.1"
beautifulsoup4 = "^4.9.3"
google = "^3.0.0"
youtube_dl = "^2021.5.16"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
